--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://natneli.github.io/nat-netflix",
+  "homepage": "https://natneli.github.io/netflix-clone-nat",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
